Fiix code review comments: 1)  move variables at the top of script. 2) change formula for wizard start height position calculation.

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
 
 <script>
   var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
   var getFireballSpeed = function(left) {
     if (left) {
       return 5;
@@ -190,8 +193,6 @@
 
     return 2;
   };
-  var wizardSpeed = 3;
-  var wizardWidth = 70;
   var getWizardHeight = function() {
     return 1.337 * wizardWidth;
   };
@@ -199,7 +200,7 @@
     return (width - wizardWidth) / 2;
   };
   var getWizardY = function(height) {
-    return (height - getWizardHeight()) * (2/3);
+    return height/3 - getWizardHeight();
   };
 </script>
 <script src="js/game.js"></script>
