Module 5 - Task 1 - Refactor code to IIFE modules with namespaces and make User Setup Dialog draggable.

--- a/index.html
+++ b/index.html
@@ -204,8 +204,15 @@
     };
   </script>
 
-  <script src="js/stat.js"></script>
+
   <script src="js/game.js"></script>
+  <script src="js/stat.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/utils.events.js"></script>
+  <script src="js/draggable.js"></script>
+  <script src="js/data.mocks.js"></script>
+  <script src="js/setup.dialog.wizards.js"></script>
+  <script src="js/setup.dialog.js"></script>
   <script src="js/setup.js"></script>
 </body>
 
