--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     </div>
   </header>
 
+  <div class="overlay error hidden">
+    ERROR
+  </div>
+
   <div class="overlay setup hidden">
     <form class="setup-wizard-form" method="post" enctype="multipart/form-data"
       url="https://js.dump.academy/code-and-magick" autocomplete="off">
@@ -210,7 +214,8 @@
   <script src="js/utils.js"></script>
   <script src="js/utils.events.js"></script>
   <script src="js/draggable.js"></script>
-  <script src="js/data.mocks.js"></script>
+  <script src="js/backend.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/setup.dialog.wizards.js"></script>
   <script src="js/setup.dialog.js"></script>
   <script src="js/setup.js"></script>
